# test-moblie

./: .gitignore  .gitmodules  .te  Cargo.toml  Makefile  README.md  env.sh  rust-toolchain.toml  te.toml  test-engine.toml
.cargo/: config.toml
.github/workflows/: build.yml
assets/: LaunchScreen.storyboard
game/: Cargo.toml
mobile-template/android/: build.gradle.kts  local.properties  settings.gradle.kts
mobile-template/android/app/: build.gradle.kts
mobile-template/android/app/src/main/: AndroidManifest.xml
mobile-template/android/app/src/main/res/values/: strings.xml
mobile-template/iOS/: export.plist
mobile-template/iOS/TEST_MOBILE_PROJECT_NAME/: main.m  test-engine.h
mobile-template/iOS/TEST_MOBILE_PROJECT_NAME.xcodeproj/: project.pbxproj
mobile-template/iOS/TEST_MOBILE_PROJECT_NAME.xcodeproj/xcshareddata/xcschemes/: TEST_MOBILE_PROJECT_NAME Release.xcscheme  TEST_MOBILE_PROJECT_NAME.xcscheme
mobile-template/iOS/TEST_MOBILE_PROJECT_NAME/Base.lproj/: LaunchScreen.storyboard
mobile-template/iOS/TEST_MOBILE_PROJECT_NAME_CAMEL_CASE/: Info.plist  TEST_MOBILE_PROJECT_NAME_CAMEL_CASE.entitlements  main.m  test-engine.h
mobile-template/iOS/TEST_MOBILE_PROJECT_NAME_CAMEL_CASE.xcodeproj/: project.pbxproj
mobile-template/iOS/TEST_MOBILE_PROJECT_NAME_CAMEL_CASE/Base.lproj/: LaunchScreen.storyboard
test-mobile/: Cargo.toml
test-mobile-game/: Cargo.toml
test-mobile-game-android/: Cargo.toml
test-mobile-game-android/src/: lib.rs
test-mobile-game/src/: lib.rs
test-mobile/src/: main.rs
(+7 files in other folders)
