[package]
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Mobile project generator for test-engine"
edition = "2021"
homepage = "https://github.com/vlasdasz/test-mobile"
license = "MIT OR Apache-2.0"
name = "test-mobile"
repository = "https://github.com/vlasdasz/test-mobile"
version = "0.2.0"

[[bin]]
name = "test-mobile"

[dependencies]
git2 = "0.18"
toml = "0.8"
anyhow = "1.0"
convert_case = "0.6"
