[package]
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Mobile project generator for test-engine"
edition = "2024"
homepage = "https://github.com/vlasdasz/test-mobile"
license = "MIT OR Apache-2.0"
name = "test-mobile"
repository = "https://github.com/vlasdasz/test-mobile"
version = "0.6.0"

[[bin]]
name = "test-mobile"

[dependencies]
anyhow = { workspace = true }
convert_case = { workspace = true }
git2 = { workspace = true }
structopt = { workspace = true }
toml = { workspace = true }
